<resources>
    <string name="app_name">E-Market</string>
    <string name="add_to_cart">Add to Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_to_new">Old to New</string>
    <string name="new_to_old">New to Old</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="primary">Primary</string>
    <string name="samsung_s22">Samsung s22</string>
    <string name="min">-</string>
    <string name="_20">20</string>
    <string name="plus">+</string>
    <string name="_12_000">12.000</string>
    <string name="price">Price</string>
    <string name="select_filter">Select Filter</string>
    <string name="filters">Filters:</string>
    <string name="home">Home</string>
    <string name="basket">Basket</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="complete">Complete</string>
    <string name="product_name">Product Name</string>
    <string name="_0_00">0.00</string>
    <string name="e_market">E-Market</string>
    <string name="sort_by">Sort By</string>
    <string name="_15_000">15.000 ₺</string>
    <string name="iphone_13_pro_max_256gb">iPhone 13 Pro Max 256Gb</string>
    <string name="filter">Filter</string>
    <string name="aston_martin">Aston Martin</string>
</resources>