<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@+id/filter_primary_button"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/filter_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/blueAppColor"
                    android:elevation="4dp"
                    app:title="E-Market"
                    app:titleTextColor="@android:color/white" />

            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:id="@+id/sort_by_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:text="Sort By"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_toolbar" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/sort_by_text"
                app:layout_constraintTop_toBottomOf="@+id/sort_by_text">

                <RadioButton
                    android:id="@+id/old_to_new"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/old_to_new" />

                <RadioButton
                    android:id="@+id/new_to_old"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_to_old" />

                <RadioButton
                    android:id="@+id/price_low_to_high"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_low_to_high" />

                <RadioButton
                    android:id="@+id/price_high_to_low"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_high_to_low" />
            </RadioGroup>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group" />

            <TextView
                android:id="@+id/brand_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/brand"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/brand_searchbar"
                style="@style/SearchBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:imeOptions="actionSearch"
                app:layout_constraintTop_toBottomOf="@+id/brand_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/brand_recyclerview"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="@+id/brand_searchbar"
                app:layout_constraintStart_toStartOf="@+id/brand_searchbar"
                app:layout_constraintTop_toBottomOf="@+id/brand_searchbar" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand_recyclerview" />

            <TextView
                android:id="@+id/filter_model_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/model"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/brand_text"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/filter_model_searchbar"
                style="@style/SearchBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:imeOptions="actionSearch"
                app:layout_constraintTop_toBottomOf="@+id/filter_model_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/filter_model_recyclerview"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="@+id/filter_model_searchbar"
                app:layout_constraintStart_toStartOf="@+id/filter_model_searchbar"
                app:layout_constraintTop_toBottomOf="@+id/filter_model_searchbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filter_primary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/primary"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/header3Size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />
</androidx.constraintlayout.widget.ConstraintLayout>
